# interpolated-coordinates

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  SECURITY.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: ci_cron_weekly.yml  ci_tests.yml  codeql-analysis.yml  open_actions.yml
docs/: conf.py  conftest.py  credits.rst  index.rst
docs/documentation/: code_quality.rst  installation.rst  testing.rst
docs/interpolated_coordinates/: generic_representation.rst  index.rst  spline.rst
docs/static_images/: irep_fig.py  spline_fig.py
docs/whatsnew/: 0.1.rst  index.rst
interpolated_coordinates/: __init__.py  _astropy_init.py  conftest.py  core.py  frame.py  representation.py  version.py
interpolated_coordinates/tests/: __init__.py  test_core.py  test_frame.py  test_representation.py
interpolated_coordinates/utils/: __init__.py  generic_representation.py  spline.py
interpolated_coordinates/utils/tests/: test_generic_representation.py  test_interpolate.py  test_spline.py
licenses/: LICENSE.rst
src/interpolated_coordinates/: __init__.py  _astropy_init.py  _type_hints.py  _version.py  conftest.py  frame.py  representation.py  version.py
src/interpolated_coordinates/tests/: test_frame.py  test_representation.py
src/interpolated_coordinates/utils/: __init__.py  generic_representation.py  spline.py
src/interpolated_coordinates/utils/tests/: test_generic_representation.py  test_spline.py
tests/: __init__.py  test_frame.py  test_representation.py
tests/test_utils/: test_generic_representation.py  test_spline.py
