[project]
name = "interpolated_coordinates"
version = "0.1.0"
description = "Univariate Interpolations of Astropy Coordinates"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "licenses/LICENSE.rst"}
keywords = ["interpolate", "interpolation", "coordinates", "astronomy"]
authors = [
    {name = "Nathaniel Starkman"}
]
maintainers = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=5.0",
    "numpy",
    "scipy>=1.6",
]

[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm>=6.2",
  "extension_helpers",
  "wheel"
]

build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
  "coverage[toml]",
  "matplotlib>=3.3",
  "pytest",
  "pytest-astropy",
]
docs = [
  "graphviz",
  "matplotlib>=3.3",
  "sphinx-astropy",
  "sphinx",
  "tomlkit",
]

[project.urls]
repository = "https://github.com/nstarman/interpolated-coordinates"
documentation = "https://github.com/nstarman/interpolated-coordinates"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = [
  "ANN101",  # Missing type annotation for `self` in method
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `*args`
  "D102",  #  Missing docstring in public method
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D205",  # 1 blank line required between summary line and description
  "D213",  # Multi-line docstring summary should start at the second line
  "D401",  # First line should be in imperative mood
  "SLF001",  # Private member accessed
  "TD0",   # TODO stuff
]

[tool.ruff.per-file-ignores]
"docs/*.py" = ["D100", "INP001"]
"docs/conftest.py" = ["ANN001", "ANN202"]
"src/inerpolated_coordinates/conftest.py" = ["ANN001"]
"tests/*.py" = ["ANN", "ARG002", "N801", "PLR2004", "S101"]

[tool.ruff.isort]
known-first-party = ["interpolated_coordinates"]

[tool.ruff.pylint]
max-args = 15


[tool.mypy]
  python_version = 3.9

  disallow_untyped_defs = true
  ignore_missing_imports = true
  no_implicit_optional = true
  warn_return_any = true
  warn_redundant_casts = true
  warn_unused_configs = true
  warn_unreachable = true
  exclude = '''(^|/)docs/|(^|/)tests/'''

  [[tool.mypy.overrides]]
    module = [
      "docs/*",
      "tests/*",
    ]
    ignore_errors = true


[tool.pytest.ini_options]
testpaths = [
  "src/interpolated_coordinates",
  "docs",
]
astropy_header = "True"
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
filterwarnings = [
  # tomlkit
  "ignore:The config value `project' has type `String', defaults to `str'.",
  "ignore:The config value `htmlhelp_basename' has type `String', defaults to `str'.",
]

[tool.coverage.run]
omit = [
  "*/interpolated_coordinates/conftest.py",
  "*/interpolated_coordinates/*setup_package*",
  "*/interpolated_coordinates/_version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "'def main(.*):'",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
