[metadata]
name = interpolated_coordinates
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/interpolated-coordinates
description = Univariate Interpolations of Astropy Coordinates
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/interpolated-coordinates
keywords = astropy, coordinate, interpolation
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy


[options.extras_require]
test =
    coverage[toml]
    matplotlib
    pytest
    pytest-astropy
docs =
    graphviz
    matplotlib
    sphinx-astropy
    sphinx
    pytest
