[metadata]
name = interpolated_coordinates
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/interpolated-coordinates
description = Univariate Interpolations of Astropy Coordinates
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/interpolated-coordinates
keywords = astropy, coordinate, interpolation
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy


[options.extras_require]
test =
    matplotlib
    pytest
    pytest-astropy
docs =
    graphviz
    matplotlib
    sphinx-astropy
    sphinx
    pytest

[coverage:run]
omit =
    interpolated_coordinates/_astropy_init*
    interpolated_coordinates/conftest.py
    interpolated_coordinates/*setup_package*
    interpolated_coordinates/tests/*
    interpolated_coordinates/*/tests/*
    interpolated_coordinates/extern/*
    interpolated_coordinates/version*
    */interpolated_coordinates/_astropy_init*
    */interpolated_coordinates/conftest.py
    */interpolated_coordinates/*setup_package*
    */interpolated_coordinates/tests/*
    */interpolated_coordinates/*/tests/*
    */interpolated_coordinates/extern/*
    */interpolated_coordinates/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    'def main\(.*\):'
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
